# wro-2022_23

./: README.md
Dokumentation/Bauteile/: Bauteile_Erklärung
Dokumentation/Code/: Robo_Farbsensor_Nano.ino
OpenCV_Test/: CMakeLists.txt  main.cpp
Programme Wettbewerb/: Roboter_Hindernisrennen_Mega_DI.ino  Roboter_Hindernisrennen_Pixy_DQ.ino
opencv_test/: main.cpp
opencv_test_windows/: CMakeLists.txt  Readme.md  main.cpp
pigpio_test/: CMakeLists.txt  main.cpp
rplidar_test/: CMakeLists.txt
rplidar_test/src/: main.cpp  rplidar_driver.cpp  sdkcommon.h  sl_crc.cpp  sl_lidar_driver.cpp  sl_serial_channel.cpp  sl_tcp_channel.cpp  sl_udp_channel.cpp
rplidar_test_arduino/: Automatisches_Fahren X Bodenlinienerkennung Feb22  Lidar an der inneren Bande navigieren.ino  Lidar902700.ino  Lidar_LCD.ino  Lidar_Seltsame_Werte.ino  Lidar_an_der_inneren_Bande_navigieren_zwei.ino  R_Eroeffungsrennen_Mega.ino  Roboter_Hindernisrennen_Mega.ino  Roboter_Hindernisrennen_Mega_DI.ino  Roboter_Hindernisrennen_Pixy.ino  Roboter_Hindernisrennen_Pixy_DQ.ino  lidar_datenauswertung.ino
rplidar_test_arduino/aktuelle_Programme/: Roboter_Hindernisrennen_Mega_DI.ino  Roboter_Hindernisrennen_Pixy_DQ.ino
thread_test/: FarbsensorV1  FarbsensorV2  Farbsensor_Test_Arduino  Gyrosensor V1  I2C_Display_Farbsensor_Nano_Siht  thread_test.cpp
